--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@conduitvc/ascoltatori": "^4.3.0-patch.2",
+    "@conduitvc/mosca": "^2.8.3-patch.3",
+    "kafka-node": "^4.0.2",
+    "mosca": "^2.8.3",
+    "mqtt": "^2.18.8",
+    "strong-pubsub-kafka": "../strong-pubsub-kafka",
+    "uuid-by-string": "^2.1.0"
+  }
 }
